<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/naranja">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/splash_image_description"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_foreground" />
        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textColor="@color/gris"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/tvAppName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold"
            android:letterSpacing="0.1"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvAppName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name2"
            android:textColor="@color/gris"
            android:textSize="60sp"
            android:textStyle="bold"
            android:letterSpacing="0.1"
            android:gravity="center"
            android:layout_marginBottom="32dp"/>

        <TextView
            android:id="@+id/tvLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_message"
            android:textColor="@color/gris"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:id="@+id/ivSplash"
            android:layout_width="337dp"
            android:layout_height="328dp"
            android:contentDescription="@string/splash_image_description"
            android:scaleType="fitCenter"
            android:src="@drawable/img_splash" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout> 